<resources>
    <string name="app_name">Palfinder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Mauricio Poveda</string>
    <string name="user_description">Design, code and content, Knicks MixTape, Hip-Hop extraordinaire</string>
    <string name="user_username">mpfractal</string>
    <string name="user_avatar_description">Avatar of the user</string>

    <!-- Authentication -->
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="next_action_label">Continue</string>
    <string name="palfinder_logo">Palfinder Logo</string>
    <string name="recover_password_label">Forgot password?</string>
    <string name="wrong_login_credentials">It seems like the login information is incorrect</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="email_label">Email</string>
    <string name="cancel_action_label">Cancel</string>
    <string name="no_account_msg">Don\'t have an account?</string>
    <string name="title_register">Register</string>
    <string name="title_confirm_sign_up">Time to validate your account!</string>
    <string name="security_code">Security Code</string>
    <string name="log_out">Log out</string>
    <string name="title_recover_password">Recover Password</string>
    <string name="verification_code">Verification Code</string>
    <string name="save_changes">Save Changes</string>
    <string name="has_recovery_code">Already have a recovery code?</string>
    <string name="confirm_sign_up_msg">To validate your account, copy the code we sent to the email you specified</string>
    <string name="get_recovery_code_detail">Before we continue, type your username so we can send a verification code to your email account.</string>
    <string name="send">Send</string>
    <string name="confirm">Confirm</string>
    <string name="password_helper_text">At least 8 characters, 1 uppercase and 1 special character</string>

    <!-- Tags -->
    <string name="add_tag_label">Tag</string>
    <string name="remove_tag_label">Remove Tag</string>
    <string name="popular_tags">Popular Tags</string>
    <string name="selected_label">Selected Items:</string>

    <!-- Groups List  -->
    <string name="title_group_list">Groups</string>
    <string name="no_groups_found">No groups found</string>
    <string name="group_list_discover_lbl">Discover</string>
    <string name="group_list_my_groups_lbl">My Groups</string>
    <string name="group_list_add_group">Create group</string>
    <string name="group_list_my_suggested_subtitle">Latest</string>
    <string name="group_list_my_groups_subtitle">My Groups</string>
    <string name="group_profile_join">Join</string>
    <string name="group_profile_joined">Joined</string>
    <string name="group_profile_owner">Owner</string>
    <string name="search_group_hint">Find a group</string>
    <string name="group_list_no_groups">There are currently no groups in this section.</string>
    <string name="group_list_reload">Reload groups</string>

    <!-- Groups Profile  -->
    <string name="title_group_profile">Group</string>
    <string name="group_profile_add_user_lbl">Add user</string>
    <string name="group_profile_create_event_lbl">Create event</string>
    <string name="group_profile_share_lbl">Share</string>
    <string name="group_profile_privacy_subtitle">Privacy:</string>
    <string name="group_profile_description">Description: </string>
    <string name="group_profile_tags">Tags: </string>
    <string name="group_profile_next_events_subtitle">Next Events</string>
    <string name="group_profile_members_subtitle">Members</string>
    <string name="group_profile_view_all_members">View all</string>
    <string name="group_profile_remove_user">Remove</string>
    <string name="group_profile_role_user">Role</string>
<!--    <string name="group_list_no_members">There are currently no members.</string>-->
    <string name="group_list_no_members">Can\'t find the members right now.</string>

    <!-- Group Users List -->
    <string name="title_group_user_list">Group members</string>

    <!--  Add Group Member  -->
    <string name="title_group_user_add">Group member administration</string>
    <string name="hint_group_user_add">Adding a user to your group. Select from the available ones.</string>
    <string name="lbl_roles">Role</string>
    <string name="lbl_username">Username</string>

    <!-- Edit and create group -->
    <string name="title_group_edit">Group administration</string>
    <string name="hint_group_edit">Groups allows you to share activities with people with similar interests</string>
    <string name="lbl_group_name">Name</string>
    <string name="lbl_group_tags">Tags</string>
    <string name="lbl_group_description">Description</string>
    <string name="lbl_group_members">Members</string>
    <string name="lbl_status">Status</string>
    <string name="btn_image">Add image</string>
    <string name="group_image">Group image</string>
    <string-array name="status">
        <item>Private</item>
        <item>Public</item>
    </string-array>

    <!-- Events List  -->
    <string name="title_event_list">Event List</string>
    <string name="event_list_no_events">There are currently no events in this section.</string>

    <!-- Add Event  -->
    <string name="title_event_create">Add Event</string>
    <string name="text_event_create">Please fill all fields</string>

    <!-- Create Event  -->
    <string name="text_event_description">Description</string>
    <string name="text_event_date">Date</string>
    <string name="text_event_location">Location</string>
    <string name="text_event_price">Price</string>
    <string name="text_event_name">Name</string>

    <!-- Event List  -->
    <string name="text_event_list_detail">Detail</string>


    !-- Btn Actions -->
    <string name="btn_create">Create</string>
    <string name="btn_cancel">Cancel</string>
    <string name="search_user_hint">Search User</string>
    <string name="search_general_hint">Search something...</string>
    <string name="title_activity_initial_account_setup">InitialAccountSetup</string>
    <string name="pick_tag">Pick Your Tags</string>
    <string name="account_preferences_title">Account Preferences</string>
    <string name="tags_label">Tags</string>
    <string name="groups_label">Groups</string>
    <string name="pick_groups">Join Groups!</string>
    <string name="nothing_found">No items matched your search</string>
    <string name="nothing_found_subtitle">Try using a different keyword or make check your grammar</string>
    <string name="no_items_left">It seems like there are no more items</string>
    <string name="initial_setup_msg">Make sure the data here is what you wanted, feel free to go back and change what you need</string>
    <string name="mnuSearch">Search</string>
    <string name="mnuEvents">Events</string>
    <string name="mnuAdmins">Admins</string>
    <string name="mnuHome">Home</string>
    <string name="mnuProfile">Profile</string>
    <string name="mnuNotifications">Notifications</string>
    <string name="mnuUsers">Users</string>
    <string name="mnuEventDetail">Details</string>
    <string name="mnuGroups">Groups</string>
    <string name="filters_label">Search Filters</string>
    <string name="initial_setup_label">Initial Account Setup</string>
    <string name="initial_setup_paragraph">Before you begin, please let us know a little more about you. This will make the experience tailored to you</string>
    <string name="group_members_full_name_placeholder">Full Name</string>
    <string name="group_members_username_placeholder">Username</string>
    <string name="group_members_description_placeholder">TexTexTextttTextTexTexTexttt TextTexTex TextttTextTexTexTextttTextTexTexTextttTextTexTexTextttTextTexTexTextttT extTexTexTextttTextTexTe xTextttTextTexTexTextttT</string>

</resources>
