<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardDefault"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:orientation="horizontal"
    android:paddingVertical="16dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="0dp"
    android:id="@+id/card_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_user_picture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/min_user_profile_width"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/group_image"
            android:scaleType="centerCrop"
            android:src="@drawable/user_profile_avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_medium"
            android:paddingVertical="@dimen/spacing_small">

            <TextView
                android:id="@+id/tv_full_name"
                style="@style/Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/group_members_full_name_placeholder" />
            <TextView
                android:id="@+id/tv_username"
                style="@style/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/group_members_username_placeholder" />
            <TextView
                android:id="@+id/tv_description"
                style="@style/Paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:visibility="gone"
                android:text="@string/group_members_description_placeholder" />

            <Button
                android:id="@+id/btn_role"
                style="@style/ButtonGhost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_profile_role_user"
                android:focusable="true"
                android:enabled="false"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btn_remove"
                style="@style/ButtonError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_profile_remove_user"
                android:focusable="true"
                android:textSize="14sp"/>

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>